fix figure caption alignment

--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ p {
     padding-bottom: 30px;
 }
 
+.figure p {
+    text-align: center;
+}
+
 a {
     color: #888888
 }
